# testrail-cli

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml  release.yml  test.yml
docs/: configuration.md  development.md  installation.md
examples/: example-cases.csv  example-config.yaml  example-mapping.yaml  example-results.json
testrail_cli/: __init__.py  __main__.py  client.py  config.py  csv_import.py  io.py
testrail_cli/commands/: __init__.py  attachments.py  case_fields.py  case_types.py  cases.py  config.py  milestones.py  plans.py  priorities.py  projects.py  raw.py  result_fields.py  results.py  runs.py  sections.py  statuses.py  suites.py  tests.py  users.py
tests/: __init__.py  conftest.py
tests/integration/: test_cli.py
tests/unit/: test_commands_cases.py  test_commands_milestones.py  test_commands_plans.py  test_commands_projects.py  test_commands_results.py  test_commands_runs.py  test_commands_suites.py  test_config.py  test_csv_import.py  test_io.py
